--- a/deno.json
+++ b/deno.json
@@ -1,12 +1,11 @@
 {
   "tasks": {
-    "dev": "deno run --allow-net --watch ./src/main.ts",
-    "start": "deno run --allow-net  ./src/main.ts"
+    "dev": "deno run --allow-net --watch server.ts",
+    "start": "deno run --allow-net server.ts"
   },
   "fmt": {
     "useTabs": false,
     "semiColons": true,
-    "singleQuote": true,
-    "include": ["src/"]
+    "singleQuote": true
   }
 }
