--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "tasks": {
-    "dev": "deno run --allow-net --watch main.ts",
-    "start": "deno run --allow-net main.ts"
+    "dev": "deno run --allow-net --allow-read --watch main.ts",
+    "start": "deno run --allow-net --allow-read main.ts"
   },
   "deploy": {
     "exclude": [],
