--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,8 @@
 {
   "tasks": {
+    "build": "deno run --allow-read --allow-write build.ts",
     "dev": "deno run --allow-net --allow-read --watch main.ts",
-    "start": "deno run --allow-net --allow-read main.ts"
+    "start": "deno run build && deno run --allow-net --allow-read main.ts"
   },
   "deploy": {
     "exclude": [],
